exports[`test renders MarvelCharacterDetail correctly when there is one character selected and fetching done 1`] = `
<div
  className="marvel-character-detail">
  <div>
    <h1>
      3-D Man
    </h1>
    <img
      alt="3-D Man"
      className="thumbnail"
      src="http://mock/1/portrait.jpg" />
  </div>
</div>
`;

exports[`test renders MarvelCharacterDetail with error img if character portrait failed to load 1`] = `
<div
  className="marvel-character-detail">
  <div>
    <h1>
      A-Bomb (HAS)
    </h1>
    <div
      className="img-404">
      Image Not Found
    </div>
  </div>
</div>
`;

exports[`test renders MarvelCharacterDetail without crashing and display loader 1`] = `
<div
  className="marvel-character-detail">
  <img
    alt="React logo spinning"
    className="react-logo-loader"
    src="logo.svg" />
</div>
`;
